--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
   <groupId>org.example</groupId>
   <artifactId>PersonalBlog</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <modules>
+    <module>blog-ui</module>
+  </modules>
+  <packaging>pom</packaging>
 
   <name>PersonalBlog for my wife</name>
   <!-- FIXME change it to the project's website -->
